--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
+		"postbuild": "next-sitemap",
     "start": "next start",
     "type-check": "tsc"
   },
@@ -28,6 +29,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "next-sitemap": "^1.3.16",
     "prettier": "2.2.1",
     "typescript": "^4.1.2"
   }
