--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "analyze": "cross-env ANALYZE=true next build",
     "build": "next build",
     "dev": "next dev",
-		"postbuild": "next-sitemap",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "type-check": "tsc"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^10.0.5",
     "next": "10.0.3",
+    "next-compose-plugins": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.30.0"
@@ -21,6 +24,7 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "cross-env": "^7.0.3",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^7.0.0",
