--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "ahooks": "^2.9.4",
     "next": "10.0.3",
     "next-compose-plugins": "^2.2.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "sass": "^1.30.0"
   },
   "devDependencies": {
