--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "autoprefixer": "^10.2.3",
     "cross-env": "^7.0.3",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -35,7 +36,9 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "next-sitemap": "^1.3.16",
+    "postcss": "^8.2.4",
     "prettier": "2.2.1",
+    "tailwindcss": "^2.0.2",
     "typescript": "^4.1.2"
   }
 }
