--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^10.0.5",
+    "@welldone-software/why-did-you-render": "^6.0.5",
     "ahooks": "^2.9.4",
     "next": "10.0.3",
     "next-compose-plugins": "^2.2.1",
