--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ahooks": "^2.9.4",
     "next": "10.0.3",
     "next-compose-plugins": "^2.2.1",
+    "next-pwa": "^5.0.5",
     "next-seo": "^4.19.0",
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
