fix: npm audit fix

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@next/bundle-analyzer": "^10.0.5",
     "@welldone-software/why-did-you-render": "^6.0.5",
     "ahooks": "^2.9.4",
-    "next": "10.0.3",
+    "next": "^10.0.7",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.0.5",
     "next-seo": "^4.19.0",
@@ -32,7 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "autoprefixer": "^10.2.3",
-    "babel-plugin-inline-react-svg": "^1.1.2",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.15.0",
     "eslint-config-airbnb": "^18.2.1",
