--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss": "^8.2.4",
     "prettier": "2.2.1",
     "tailwindcss": "^2.0.2",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "webpack": "^4.46.0"
   }
 }
