--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-lazyload": "^3.2.0",
     "sass": "^1.30.0"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-lazyload": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "autoprefixer": "^10.2.3",
