--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sass": "^1.30.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^4.0.2",
     "@types/node": "^14.14.10",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^17.0.0",
