--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "next-sitemap": "^1.3.16",
     "postcss": "^8.2.4",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "2.2.1",
     "tailwindcss": "^2.0.2",
     "typescript": "^4.1.2",
