--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/bundle-analyzer": "^10.0.5",
     "@welldone-software/why-did-you-render": "^6.0.5",
     "ahooks": "^2.9.4",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "next": "^10.1.3",
     "next-compose-plugins": "^2.2.1",
